samples/_failures_safe/1761002131_d2d2b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_940e22ac.c: In function ‘main’:
./samples/SAFE/__tmp_940e22ac.c:204: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_940e22ac.c:203:5: error: expected declaration or statement at end of input
  203 |     Token tokens[MAX_TOKENS
      |     ^~~~~
